cluster/netpols/allow-vm-ingress/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/networkpolicy-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vm-ingress
spec:
  podSelector: {}
  ingress:
    # Allow traffic from victoria-metrics
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "victoria-metrics"
